frontend/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: frontend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: frontend
    spec:
      volumes:
        - name: cache
          emptyDir: {}
        - name: run
          emptyDir: {}
        - name: tmp
          emptyDir: {}
      containers:
        - name: app
          image: dev.local/d22/frontend
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
              name: web
              protocol: TCP
          volumeMounts:
            - name: cache
              mountPath: /var/cache/nginx
            - name: run
              mountPath: /var/run
            - name: tmp
              mountPath: /tmp

          readinessProbe:
            httpGet:
              path: /healthz
              port: web
            initialDelaySeconds: 3
            periodSeconds: 5
            timeoutSeconds: 1
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /healthz
              port: web
            initialDelaySeconds: 10
            periodSeconds: 20
            timeoutSeconds: 1
            failureThreshold: 3
