frontend/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
spec:
  ingressClassName: nginx
  rules:
    # make sure the IP address matches the output of `minikube ip`
    # format should always be bitcoin.1.2.3.4.nip.io
    - host: bitcoin.192.168.49.2.nip.io
      http:
        paths:
          - backend:
              service:
                name: frontend
                port:
                  name: http
            pathType: Prefix
            path: /
